--- a/main.html
+++ b/main.html
@@ -4,12 +4,74 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        body {
+            font-family: Arial, sans-serif;
+            width: 1100px;
+            margin: 0 auto;
+        }
+        .imageContainer {
+            text-align: center;
+        }
+        .imageContainer img {
+            width: 100%;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        td {
+            border: 1px solid #ccc;
+            padding: 10px;
+        }
+        .col1, .col3 {
+            width: 200px;
+        }
+        .col2 {
+            width: 600px;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+
+	<div class="imageContainer">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8K9y-y8Zyv_BEm24SgasDSO6n_AhUYzOlQ&s" alt="Main Image">
+    </div>
+    <table>
+        <tr>
+            <td class="col1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8K9y-y8Zyv_BEm24SgasDSO6n_AhUYzOlQ&s" alt="Image 1">
+            </td>
+            <td class="col2">
+                <h2>Unit #5 - Floor Plans</h2>
+                <p>A. Kitchen</p>
+                <p>B. Bathroom</p>
+                <p>C. Using "Slabs"</p>
+                <p>D. Georgian Home</p>
+                <p>E. Sketching Assignment #5</p>
+            </td>
+            <td class="col3">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8K9y-y8Zyv_BEm24SgasDSO6n_AhUYzOlQ&s" alt="Image 2">
+            </td>
+        </tr>
+        <tr>
+            <td class="col1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8K9y-y8Zyv_BEm24SgasDSO6n_AhUYzOlQ&s" alt="Image 3">
+            </td>
+            <td class="col2">
+                <h2>Objective</h2>
+                <p>Discuss factors that are important in the design of bedrooms. Plan the size and location of closets for a typical residence. Plan a furniture arrangement for a room. Implement important design considerations for bathrooms. Plan a bathroom that follows solid design principles. Plan the service area of a home by applying good design principles. Design a functional kitchen to meet a family's needs. Select kitchen appliances that are appropriate for a design. Plan an efficient clothes care center. Describe appropriate dimensions for garage space. Identify the rooms and areas that comprise the living area. Apply design principles to planning a living room. Integrate the furniture in a living room plan. Analyze a dining room using good design principles. Design a functional entry and foyer.</p>
+            </td>
+            <td class="col3">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC8K9y-y8Zyv_BEm24SgasDSO6n_AhUYzOlQ&s" alt="Image 4">
+            </td>
+        </tr>
+    </table>
 
 </body>
 
